# mytranslator

./: .env.example  AGENTS.md  Cargo.toml  LICENSE  README.md  README_ZH.md  config.toml
src/: api.rs  config.rs  error.rs  lib.rs  llm.rs  main.rs
tests/: api.rs
