[package]
name = "mytranslator"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
dotenvy = "0.15"
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
salvo = { version = "0.92.1", features = ["affix-state", "oapi", "test"] }
salvo-oapi = { version = "0.92.1", features = ["swagger-ui"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "1"

[dev-dependencies]
pretty_assertions = "1"
